@@ -29,6 +29,7 @@ Data\VehicleDB.lua
 Data\NotesDB.lua
 Data\TalentsDB.lua
 Data\QuestGiversDB.lua
+Data\QuestRewardsDB.lua
 Data\TalentSystems\TitanicResearchDB.lua
 Data\TalentSystems\BoxOfManyThingsDB.lua
 Data\TalentSystems\CypherOfFirstOnesDB.lua
